--- a/index.html
+++ b/index.html
@@ -238,6 +238,6 @@
       </div>
     </section>
   </template>
-  <script type="module" src="js/main.ts"></script>
+  <script type="module" src="js/main.js"></script>
 </body>
 </html>
